[project]
name = "devhelm"
version = "0.1.2"
description = "DevHelm SDK for Python — typed client for monitors, incidents, alerting, and more"
authors = [{ name = "DevHelm", email = "hello@devhelm.io" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["devhelm", "monitoring", "sdk", "uptime", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic[email]>=2.0",
]

[project.urls]
Homepage = "https://github.com/devhelmhq/sdk-python"
Repository = "https://github.com/devhelmhq/sdk-python.git"
Issues = "https://github.com/devhelmhq/sdk-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devhelm"]

[tool.uv]
default-groups = "all"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14",
    "mypy>=1.15",
    "datamodel-code-generator>=0.30",
    "build>=1.0",
    "twine>=6.0",
]

[tool.ruff.lint]
extend-select = ["C90", "I"]

[tool.ruff.lint.per-file-ignores]
"src/devhelm/_generated.py" = ["I001"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.mypy]
strict = true
show_error_codes = true
pretty = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
# P5 (cast budget): _generated.py is checked in strict mode along with
# everything else. The single justified suppression in there is the
# `[assignment]` collision documented in scripts/typegen.sh.

[tool.pytest.ini_options]
testpaths = ["tests"]
